<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/privacy_policy_text"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_top_image_height"
                android:scaleType="centerCrop"
                android:src="@drawable/auth_top_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_content_margin"
                android:layout_marginLeft="@dimen/auth_content_margin"
                android:layout_marginRight="@dimen/auth_content_margin"
                android:layout_marginTop="@dimen/auth_logo_top_margin"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/auth_logo_size"
                    android:layout_height="@dimen/auth_logo_size"
                    card_view:srcCompat="@drawable/ic_app_logo"/>

                <TextView
                    style="@style/HeaderTextDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/authenticator"/>

                <TextView
                    style="@style/StandartTextDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/auth_content_margin"
                    android:gravity="center"
                    android:text="@string/auth_protect_your_account"/>

                <android.support.v7.widget.CardView
                    android:onClick="onGoogleAuth"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/auth_button_height"
                    android:layout_margin="4dp"
                    card_view:cardBackgroundColor="@color/googleColor"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="0dp">

                    <TextView
                        style="@style/StandartTextBoldWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/continue_with_google"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:onClick="onFacebookAuth"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/auth_button_height"
                    android:layout_margin="4dp"
                    card_view:cardBackgroundColor="@color/facebookColor"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="0dp">

                    <TextView
                        style="@style/StandartTextBoldWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/continue_with_facebook"/>

                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:onClick="onSkipAuth"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/auth_button_height">

                    <TextView
                        android:id="@+id/skip_text"
                        style="@style/StandartTextBoldDark"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/skip_auth"
                        android:textAllCaps="true"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/skip_text"
                        android:layout_toRightOf="@id/skip_text"
                        android:tint="@color/text_color_dark"
                        card_view:srcCompat="@drawable/ic_arrow_forward"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/privacy_policy_text"
        style="@style/SmallTextDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/fragment_background_color"
        android:gravity="center"
        android:padding="@dimen/default_activity_padding"
        android:text="@string/privacy_policy_text"/>

</RelativeLayout>